--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,17 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
+albumentations = "^1.3.1"
 cairosvg = "^2.7.0"
 click = "^8.1.3"
+colour-science = "^0.4.2"
 ffmpeg-python = "^0.2.0"
+gpustat = "^1.1.1"
 ipykernel = "^6.23.1"
 ipywidgets = "^8.0.6"
 matplotlib = "^3.7.1"
 natsort = "^8.3.1"
+nltk = "^3.8.1"
 numpy = "^1.24.3"
 opencv-contrib-python-headless = "^4.7.0.72"
 orjson = "^3.8.10"
@@ -21,22 +25,24 @@ pandas = "^2.0.1"
 pillow = "^9.5.0"
 pre-commit = "^3.3.1"
 progressbar = "^2.5"
+pytesseract = "^0.3.10"
 python = ">=3.10,<3.11"
 scikit-image = "^0.20.0"
 scikit-learn = "^1.2.2"
 tqdm = "^4.65.0"
-pytesseract = "^0.3.10"
-colour-science = "^0.4.2"
-nltk = "^3.8.1"
-albumentations = "^1.3.1"
 
 [tool.poetry.group.torch.dependencies]
-pytorch-lightning = "*"
-segmentation-models-pytorch = "*"
-tensorboard = "*"
-torch = "*"
-torch-tb-profiler = "*"
-torchvision = "*"
+pytorch-lightning = "^2.0.8"
+segmentation-models-pytorch = "^0.3.3"
+tensorboard = "^2.14.0"
+torch = {version = "^2.0.1+cu118", source = "pytorch"}
+torch-tb-profiler = "^0.4.1"
+torchvision = {version = "^0.15.2+cu118", source = "pytorch"}
+
+[[tool.poetry.source]]
+name = "pytorch"
+priority = "explicit"
+url = "https://download.pytorch.org/whl/cu118"
 
 [tool.poetry.group.google.dependencies]
 google-api-python-client = "^2.86.0"
