--- a/plugin-cuda.yaml
+++ b/plugin-cuda.yaml
@@ -12,4 +12,4 @@
 
     - name: Execute the cuda installation script
       when: ansible_distribution == 'Ubuntu'
-      script: ./install-cuda-11.8.sh
+      script: ./install_cuda-12.sh
