--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ tqdm = "^4.65.0"
 
 [tool.poetry.group.tensorflow.dependencies]
 tensorflow = { version = ">=2.15,<2.16", extras = ["and-cuda"] }
-tensorrt = "*"
+tensorrt = "^8.6.1"
 
 [tool.poetry.group.torch.dependencies]
 pytorch-lightning = "*"
